erDiagram
    USERS {
        int id PK
        string username UK
        string email UK
        string password_hash
        string full_name
        string location
        string interests
        string google_id UK
        string google_access_token
        string google_refresh_token
        string google_token_uri
        string google_client_id
        string google_client_secret
        string google_scopes
        string google_token_expiry
        datetime created_at
    }

    FACE_EMBEDDINGS {
        int id PK
        int user_id FK
        blob embedding
        string embedding_version
        string face_photo_path
        datetime enrolled_at
    }

    ATTENDANCE {
        int id PK
        int user_id FK
        datetime check_in_time
        float verification_score
        string method
    }

    CONVERSATION_HISTORY {
        int id PK
        int user_id FK
        string session_id
        string role
        string content
        string intent
        string agent_type
        string metadata
        datetime created_at
    }

    USERS ||--o{ FACE_EMBEDDINGS : has
    USERS ||--o{ ATTENDANCE : records
    USERS ||--o{ CONVERSATION_HISTORY : generates
